--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
     <div class="page">
         <!-- start header -->
         <header class="header">
+            <!-- hamburger menu -->
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <span></span>
+                </label>
+                <ul class="menu__box">
+                    <li><a class="menu__item" href="#">Main</a></li>
+                    <li><a class="menu__item" href="#">Gallery</a></li>
+                    <li><a class="menu__item" href="#">News</a></li>
+                    <li><a class="menu__item" href="#">Profile</a></li>
+                </ul>
+            </div>
+
+            <!-- end hamburger menu -->
+
             <div class="header__container">
                 <div class="header__contaoner-left">
                     <img src="./image/svg/logo.svg" alt="логотип" class="header__logo">
