--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- end hamburger menu -->
 
             <div class="header__container">
-                <div class="header__contaoner-left">
+                <div class="header__container-left">
                     <img src="./image/svg/logo.svg" alt="логотип" class="header__logo">
                     <ul class="header__nav-bar">
                         <li><a href="#" class="header__link">Main</a></li>
@@ -223,8 +223,8 @@
             <!-- start button add cards -->
 
             <!-- section button up -->
-            <section class="btn">
-                <button class="btn__up"></button>
+            <section class="btn-scroll">
+                <button class="btn-scroll__up"></button>
             </section>
             <!-- end section button up -->
         </main>
