--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
         </div>
     </div>
     <!-- end popup take me -->
-    <script src="./js/script.js"></script>
-    <script src="./js/validate.js" defer></script>
-    <script src="./js/card.js" defer></script>
+<script type="module" src="./pages/index.js"></script>
+<!-- <script type="module" src="./componets/Card.js"></script>
+<script type="module" src="./componets/Section.js"></script>
+<script type="module" src="./componets/Popup.js"></script> -->
 </body>
 
 </html>
