added function more itens handle btn

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <!-- start button add cards -->
             <section class="add-items">
-                <button class="add-items__btn">Показать еще 20</button>
+                <button class="add-items__btn">Показать еще</button>
             </section>
             <!-- start button add cards -->
 
