start function sorts

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- start section selector and sort cards -->
             <section class="selector">
                 <h6 class="selector__title">Сортировать по:</h6>
-                <select class="selector__select" name="" id="">
+                <select class="selector__select sort-price" name="" id="">
                     <option class="selector__select-price" value=""></option>
                     <option class="selector__select-price" value="price">Цене</option>
 
