--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <option class="selector__select-price" value="price">Цене</option>
 
                 </select>
-                <select class="selector__select" name="" id="">
+                <select class="selector__select sort-age" name="" id="">
                     <option class="selector__select-age" value=""></option>
                     <option class="selector__select-age" value="age">Возрасту</option>
                 </select>
@@ -79,7 +79,7 @@
                                 <div class="cards__card-line"></div>
                                 <p class="cards__subtitle">Коричневый окрас</p>
                                 <div class="cards__age-container">
-                                    <p class="cards__subtitle-age cards__num_bold">2 мес.</p>
+                                    <p class="cards__subtitle-age cards__num_bold age"></p>
                                     <span class="cards__subtitle">Возраст</span>
                                 </div>
                                 <div class="cards__pow-container">
