--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -38,11 +38,11 @@
                         <li><a href="#" class="header__link">News</a></li>
                         <li><a href="#" class="header__link">Profile</a></li>
                     </ul>
-                    <h1 class="header__title">Найдено 349 котов</h1>
+                    <h1 class="header__title">Cats Shop</h1>
                 </div>
                 <div class="header__info-container">
                     <p class="header__phone-number">+544 3490 00000</p>
-                    <p class="header__phone-subtitle">Звони скорее!</p>
+                    <p class="header__phone-subtitle">Call us!</p>
                 </div>
             </div>
 
@@ -51,15 +51,15 @@
         <main class="content">
             <!-- start section selector and sort cards -->
             <section class="selector">
-                <h6 class="selector__title">Сортировать по:</h6>
+                <h6 class="selector__title">Sort by:</h6>
                 <select class="selector__select sort-price" name="" id="">
                     <option class="selector__select-price" value=""></option>
-                    <option class="selector__select-price" value="price">Цене</option>
+                    <option class="selector__select-price" value="price">Price</option>
 
                 </select>
                 <select class="selector__select sort-age" name="" id="">
                     <option class="selector__select-age" value=""></option>
-                    <option class="selector__select-age" value="age">Возрасту</option>
+                    <option class="selector__select-age" value="age">Age</option>
                 </select>
             </section>
             <!-- end section selector and sort cards -->
@@ -74,17 +74,17 @@
                             <span class="cards__box-sale">40%</span>
                         </div>
                         <div class="card__tex-container">
-                            <h5 class="card__title">Кот полосатый</h5>
+                            <h5 class="card__title">Striped Cat</h5>
                             <div class="cards__card-info">
                                 <div class="cards__card-line"></div>
-                                <p class="cards__subtitle">Коричневый окрас</p>
+                                <p class="cards__subtitle">Brown Cat</p>
                                 <div class="cards__age-container">
                                     <p class="cards__subtitle-age cards__num_bold age"></p>
-                                    <span class="cards__subtitle">Возраст</span>
+                                    <span class="cards__subtitle">Age</span>
                                 </div>
                                 <div class="cards__pow-container">
                                     <p class="cards__subtitle-paws cards__num_bold">4</p>
-                                    <span class="cards__subtitle">Кол-во лап</span>
+                                    <span class="cards__subtitle">Paws</span>
                                 </div>
                             </div>
                             <p class="cards__price"></p>
@@ -97,7 +97,7 @@
 
             <!-- start button add cards -->
             <section class="add-items">
-                <button class="add-items__btn">Показать еще</button>
+                <button class="add-items__btn">Show More</button>
             </section>
             <!-- start button add cards -->
 
@@ -111,8 +111,8 @@
         <!-- start footer -->
         <footer class="footer">
             <div class="footer__info-container">
-                <h4 class="footer__title">Успей купить!</h4>
-                <p class="footer__subtitle">Подпишись и успей словить все акции</p>
+                <h4 class="footer__title">Buy Now!!</h4>
+                <p class="footer__subtitle">Subscribe and catch all the promotions</p>
             </div>
             <form class="footer__inputs-container form" action="#" method="post" name="form" required novalidate>
                 <div class="footer__inputs">
@@ -120,10 +120,10 @@
                         name="email-input">
                     <span class="footer__input-error form__error" id="input-email-error"></span>
                     <button type="submit" class="footer__btn-submit form__btn footer__btn-submit_disabled"
-                        disabled>Подписаться</button>
+                        disabled>Subscribe</button>
                 </div>
                 <input type="checkbox" class="footer__check-box" name="check-input" id="input-check" checked required>
-                <span class="footer__label">Подписаться на новости</span>
+                <span class="footer__label">subscribe to news</span>
             </form>
         </footer>
         <!-- end footer -->
@@ -134,7 +134,7 @@
         <div class="popup__container">
             <button class="popup__close" type="button"></button>
             <form action="#" method="post" class="popup__form" name="popup">
-                <h2 class="popup__title">Кот добавлен в избранное</h2>
+                <h2 class="popup__title">The cat has been added to favorites</h2>
                 <input class="popup__button" value="Отлично" name="submit">
             </form>
         </div>
@@ -147,7 +147,7 @@
         <div class="popup__container">
             <button class="popup__close popup-take-me__close" type="button"></button>
             <form action="#" method="post" class="popup__form" name="popup">
-                <h2 class="popup__title">Возьмите меня &#128575;</h2>
+                <h2 class="popup__title">Take Me pls &#128575;</h2>
                 <input class="popup__button popup-take-me__btn-close" value="Пожалуйста" name="submit">
             </form>
         </div>
