change readme to en

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li><a href="#" class="header__link">News</a></li>
                         <li><a href="#" class="header__link">Profile</a></li>
                     </ul>
-                    <h1 class="header__title">Cats Shop</h1>
+                    <h1 class="header__title">Cats Store</h1>
                 </div>
                 <div class="header__info-container">
                     <p class="header__phone-number">+544 3490 00000</p>
