--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             </div>
                             <p class="cards__price"></p>
                         </div>
-                        <input class="card__btn" value="Купить" type="button">
+                        <input class="card__btn" value="Buy" type="button">
                     </article>
                 </template>
             </section>
@@ -135,7 +135,7 @@
             <button class="popup__close" type="button"></button>
             <form action="#" method="post" class="popup__form" name="popup">
                 <h2 class="popup__title">The cat has been added to favorites</h2>
-                <input class="popup__button" value="Отлично" name="submit">
+                <input class="popup__button" value="Good" name="submit">
             </form>
         </div>
     </div>
@@ -147,8 +147,8 @@
         <div class="popup__container">
             <button class="popup__close popup-take-me__close" type="button"></button>
             <form action="#" method="post" class="popup__form" name="popup">
-                <h2 class="popup__title">Take Me pls &#128575;</h2>
-                <input class="popup__button popup-take-me__btn-close" value="Пожалуйста" name="submit">
+                <h2 class="popup__title">Take Me &#128575;</h2>
+                <input class="popup__button popup-take-me__btn-close" value="Please" name="submit">
             </form>
         </div>
     </div>
